2.1.0
- ...
2.0.11
- Move a couple EndChild outside of if
2.0.10
- Add an extra nil check setting text in tables
2.0.9
- Small update related to ImGui.Begin/End
2.0.8
- Fix number text on settings panel
2.0.7
- Fix error when toons zone
2.0.6
- Added color options for true/false values
- Added toggle for window transparency
- More refactoring
2.0.5
- Just refactoring things for no reason
2.0.4
- Fix tab editing
- Add some more input validation
2.0.3
- Fix crash in property and column settings view
2.0.2
- Add color picking to general settings
- Fix to allow saving more than once
- Refactor some code
2.0.1
- Add info text on config panel when nothing selected
- Add peer group to admin tab
- Text wrap config error messages
- Right align percent numbers
2.0.0
- Add in game configuration of tabs, columns and properties
- Rearrange configuration a bit
- Break up the script into a few files in a boxhud folder
- Add persistence.lua library for dumping table to save configuration
1.8.1
- Updated for RG build 216 changes
- Switch to use mq.cmd and mq.cmdf
- Updates to some conditions due to type changes
1.8.0
- Add handling for observing TLOs that may not be present on all toons
  Relies on defining dependencies between observed properties. For example:
    If you have the MQ2Monk, MQ2Eskay and MQ2Rogue plugins, which add TLO `CWTN`, and you want to observe `CWTN.Mode`, then it may interfere
    with macros running on toons without a CWTN class plugin loaded, like bards.
    This can be handled by defining the observed property as:
```
     { Name='Me.Class.ShortName' },
     { Name='CWTN.Mode', DependsOnName='Me.Class.ShortName', DependsOnValue='MNK,SHD,ROG' }
```
    This will result in the `CWTN.Mode` property only being observed on monks, shadow knights and rogues.
- Set initial window size if window has default 32x32 size.
- Exit if game state is not INGAME.
- Append character name to window ID so characters can have separate window settings.